--- a/app/src/main/res/layout/habit_item.xml
+++ b/app/src/main/res/layout/habit_item.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/habit_cardview"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_margin="4dp"
@@ -29,6 +30,13 @@
                 android:gravity="center">
             </GridView>
         </LinearLayout>
+
+        <View
+            android:id="@+id/cardview_overlay_listener"
+            android:clickable="true"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </View>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
