--- a/app/src/main/res/layout/activity_habit.xml
+++ b/app/src/main/res/layout/activity_habit.xml
@@ -8,5 +8,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.gabriel.habitsquare.HabitActivity">
-
+    <TextView
+        android:id="@+id/habit_activity_title"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        />
 </LinearLayout>
