--- a/app/src/main/res/layout/activity_habit.xml
+++ b/app/src/main/res/layout/activity_habit.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -13,4 +14,9 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         />
+    <Button
+        android:id="@+id/increment_habit"
+        android:text="Add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
