--- a/app/src/main/res/layout/activity_create_habit.xml
+++ b/app/src/main/res/layout/activity_create_habit.xml
@@ -11,12 +11,13 @@
     tools:context="com.example.gabriel.habitsquare.CreateHabitActivity">
 
     <EditText
+        android:id="@+id/habit_title_edittext"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:hint="Habit Name"/>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/create_habit_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
